--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@benmajor/jquery-touch-events": "^2.0.3",
     "@craftcms/sass": "file:packages/craftcms-sass",
     "@craftcms/vue": "file:packages/craftcms-vue",
-    "@selectize/selectize": "^0.15.2",
+    "@selectize/selectize": "selectize/selectize.js#master",
     "@types/jquery": "^3.5.7",
     "accounting": "^0.4.1",
     "axios": "^0.27.2",
