--- a/.codecov.yml
+++ b/.codecov.yml
@@ -26,12 +26,6 @@ ignore:
   - 'bootstrap'
   - 'lib'
   - 'src/config'
-  - 'src/icons'
-  - 'src/migrations'
-  - 'src/templates'
-  - 'src/test/internal'
-  - 'src/translations'
-  - 'src/views'
-  - 'src/web/assets'
+  - 'src'
   - 'tests'
   - 'vendor'
