Recent .codecov.yml change

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -26,6 +26,12 @@ ignore:
   - 'bootstrap'
   - 'lib'
   - 'src/config'
-  - 'src'
+  - 'src/icons'
+  - 'src/migrations'
+  - 'src/templates'
+  - 'src/test/internal'
+  - 'src/translations'
+  - 'src/views'
+  - 'src/web/assets'
   - 'tests'
   - 'vendor'
