--- a/phpstan.neon
+++ b/phpstan.neon
@@ -53,5 +53,5 @@ parameters:
         - '#^Dead catch#'
         - '#^PHPDoc tag @mixin contains invalid type CraftTrait\.$#'
         - '#^Parameter \#2 \$callback of function usort expects#'
-        - '#^Access to an undefined property .*Interface\b[\|\w\\]*::\$#'
-        - '#Cannot access property \$\w+ on .*Interface.$#'
+        - '#^Access to an undefined property .*Interface\b.*::\$\w+\.$#'
+        - '#Cannot access property \$\w+ on .*Interface\.$#'
