--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -43,6 +43,10 @@ jobs:
         if: ${{ startsWith(github.event.client_payload.version, '4.') }}
         run: 'composer create-project craftcms/craft ${{ env.PROJECT_DIRECTORY }}'
 
+      - name: 'Initialize Craft 5 starter project'
+        if: ${{ startsWith(github.event.client_payload.version, '5.') }}
+        run: 'composer create-project craftcms/craft^5.0.0-alpha.1 ${{ env.PROJECT_DIRECTORY }}'
+
       - name: 'Install specific Craft version'
         working-directory: ${{ env.PROJECT_DIRECTORY }}
         run: 'composer require craftcms/cms:${{ github.event.client_payload.version }} --update-with-dependencies'
@@ -56,6 +60,13 @@ jobs:
 
       - name: 'Update Craft 4 .env'
         if: ${{ startsWith(github.event.client_payload.version, '4.') }}
+        working-directory: ${{ env.PROJECT_DIRECTORY }}
+        run: |
+          sed -i 's/CRAFT_SECURITY_KEY=.*/CRAFT_SECURITY_KEY=/g' .env
+          sed -i 's/CRAFT_APP_ID=.*/CRAFT_APP_ID=/g' .env
+
+      - name: 'Update Craft 5 .env'
+        if: ${{ startsWith(github.event.client_payload.version, '5.') }}
         working-directory: ${{ env.PROJECT_DIRECTORY }}
         run: |
           sed -i 's/CRAFT_SECURITY_KEY=.*/CRAFT_SECURITY_KEY=/g' .env
