--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -35,6 +35,14 @@ jobs:
           php-version: 8.2.0
           tools: composer:v2
 
+      - name: 'Set up PHP for Craft 5'
+        uses: shivammathur/setup-php@2.23.0
+        if: ${{ startsWith(github.event.client_payload.version, '5.') }}
+        with:
+          extensions: bcmath, curl, dom, json, intl, mbstring, mcrypt, openssl, pcre, pdo, zip
+          php-version: 8.2.0
+          tools: composer:v2
+
       - name: 'Initialize Craft 3 starter project'
         if: ${{ startsWith(github.event.client_payload.version, '3.') }}
         run: 'composer create-project craftcms/craft=^1 ${{ env.PROJECT_DIRECTORY }}'
