--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "accounting": "^0.4.1",
     "axios": "^1.6.5",
     "blueimp-file-upload": "^10.31.0",
-    "d3": "^4.11.0",
-    "d3-format": "^1.4.4",
-    "d3-time-format": "^2.2.3",
+    "copy-webpack-plugin": "^11.0.0",
+    "d3": "^7.8.5",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "element-resize-detector": "^1.2.4",
     "event-stream": "3.3.5",
     "fabric": "^1.7.19",
