--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
     with:
       php_version: '8.2'
       craft_version: '5'
+      node_version: '20'
       jobs: '["ecs", "prettier", "phpstan", "tests"]'
       notify_slack: true
       slack_subteam: <!subteam^SGFL9NKNZ>
