--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "engines": {
+    "node": ">=20"
+  },
   "browserslist": [
     "extends @craftcms/browserslist-config"
   ],
