--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "timepicker": "^1.13.18",
+    "ttf2woff2": "^5.0.0",
     "typescript": "^4.7.4",
     "v-tooltip": "^2.0.3",
     "velocity-animate": "^1.5.0",
