--- a/src/web/assets/admintable/.env.example
+++ b/src/web/assets/admintable/.env.example
@@ -1,4 +1,4 @@
 DEV_SERVER_PUBLIC="http://localhost:8082/"
 DEV_SERVER_PORT="8082"
 DEV_SERVER_LOOPBACK="http://host.docker.internal:8082"
-# DEV_SERVER_HOST=127.0.0.1 # you might needed it if you have a problem with hot reloads e.g. on node 20, npm 10 via nvm
+# DEV_SERVER_HOST=127.0.0.1 # you might needed it if you have a problem with hot reloads not working
