--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     "elvanto/litemoji": "~4.3.0",
     "enshrined/svg-sanitize": "~0.16.0",
     "guzzlehttp/guzzle": "^7.2.0",
-    "illuminate/collections": "^9.1.0",
+    "illuminate/collections": "^v10.42.0",
     "mikehaertl/php-shellcommand": "^1.6.3",
     "moneyphp/money": "^4.0",
     "monolog/monolog": "^3.0",
