--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,9 @@
     "creocoder/yii2-nested-sets": "~0.9.0",
     "elvanto/litemoji": "~4.3.0",
     "enshrined/svg-sanitize": "~0.16.0",
+    "filament/support": "^3.2",
     "guzzlehttp/guzzle": "^7.2.0",
-    "illuminate/collections": "^9.1.0",
+    "illuminate/collections": "^v10.41.0",
     "mikehaertl/php-shellcommand": "^1.6.3",
     "moneyphp/money": "^4.0",
     "monolog/monolog": "^3.0",
